--- a/newDesign/shop.brand.html
+++ b/newDesign/shop.brand.html
@@ -112,46 +112,95 @@
         </ul>
     </div>
 </nav>
-<div class="mainContent">
-    <div class="topSearch">
-        <div class="featured-brand" id="featured-brand">
-            <h2 id="brand-name"></h2>
-            <p class="brand-info"><span id="locations-count">0</span> locations · <span id="availability"></span></p>
-            <p class="brand-category">Category Name · Sub Category Name</p>
-            <div class="brand-action">
-                <a href="" id="url" target="_blank" rel="noopener noreferrer">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                        <g stroke-width="1.947" transform="translate(1.474 1.22)" stroke="#2864FF" fill="none"
-                           fill-rule="evenodd">
-                            <ellipse cx="7.789" cy="7.789" rx="2.596" ry="7.789"/>
-                            <circle cx="7.789" cy="7.789" r="7.789"/>
-                            <path d="M.974 8.014H15.28"/>
-                        </g>
-                    </svg>
-                    Website
-                </a>
-                <a href="" id="phone">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#2864FF">
-                        <path d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
-                    </svg>
-                    Call
-                </a>
-                <a href="" id="email">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#2864FF">
-                        <path fill="none" d="M0 0h24v24H0z"/>
-                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/>
-                    </svg>
-                    Email
-                </a>
+<div class="mainContent greyPane">
+    <div class="bodyContainer">
+        <div class="topSearch">
+            <div class="featured-brand" id="featured-brand">
+                <h2 id="brand-name"></h2>
+                <p class="brand-info"><span id="locations-count">0</span> locations · <span id="availability"></span></p>
+                <p class="brand-category">Category Name · Sub Category Name</p>
+                <div class="brand-action">
+                    <a href="" id="url" target="_blank" rel="noopener noreferrer">
+                        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                            <g stroke-width="1.947" transform="translate(1.474 1.22)" stroke="#2864FF" fill="none"
+                               fill-rule="evenodd">
+                                <ellipse cx="7.789" cy="7.789" rx="2.596" ry="7.789"/>
+                                <circle cx="7.789" cy="7.789" r="7.789"/>
+                                <path d="M.974 8.014H15.28"/>
+                            </g>
+                        </svg>
+                        Website
+                    </a>
+                    <a href="" id="phone">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#2864FF">
+                            <path d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                        </svg>
+                        Call
+                    </a>
+                    <a href="" id="email">
+                        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#2864FF">
+                            <path fill="none" d="M0 0h24v24H0z"/>
+                            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/>
+                        </svg>
+                        Email
+                    </a>
+                </div>
             </div>
         </div>
+        <div class="brands-search-results " id="search-results">
+            <h1 id="search-results-heading" style="float: inherit">Available Locations (<span id="available-count">0</span>)</h1>
+            <div class="brands-search-results-grid" id="results"></div>
+            <div class="loading-cir" id="loader"></div>
+        </div>
     </div>
-    <div class="brands-search-results" id="search-results">
-        <h1 id="search-results-heading">Available Locations (<span id="available-count">0</span>)</h1>
-        <div class="brands-search-results-grid" id="results"></div>
-        <div class="loading-cir" id="loader"></div>
+</div>
+
+<div class="clear"></div>
+<div class="footer">
+    <div class="footerMenu">
+        <a href="help.html" class="footerNav">Help & Contact</a>
+        <a href="business.html" class="footerNav">For Merchants</a>
+        <a href="careers.html" class="footerNav">Careers</a>
+        <a href="blog.html" class="footerNav">Blog</a>
     </div>
+    <div class="socialLinks">
+				<span>
+					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+						Facebook
+					</a>
+					<a href="https://twitter.com/openpay_" class="footer-icon twit">
+						Twitter
+					</a>
+				</span>
+        <span>
+					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
+						LinkedIn
+					</a>
+					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
+						Instagram
+					</a>
+				</span>
+    </div>
+    <div class="footerAppWrapper">
+        <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8">
+            <img class="apple" src="./images/apple.svg">
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay">
+            <img class="android" src="./images/android.svg">
+        </a>
+    </div>
+    <div class="footerMoreLinksMenu">
+        <a href="privacy.html" class="footerNav">Privacy</a>
+        <a href="terms.html" class="footerNav">Terms & Conditions</a>
+        <a href="userLicence.html" class="footerNav">User Licence</a>
+        <a href="PCI.html" class="footerNav">PCI Data Security</a>
+    </div>
+    <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+    <a class="whiteLogo" href="/">
+        <img src="./images/openpay_logo_white.svg">
+    </a>
+
 </div>
 </body>
 <script>
