--- a/src/3forfree.html
+++ b/src/3forfree.html
@@ -151,7 +151,7 @@ This offer is only available to approved applicants at selected retailers, until
                 <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Bunnings’);”>
                     <img class="apple" src="./images/apple.svg">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Footer’);”>
+                <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
                     <img class="android" src="./images/android.svg">
                 </a>
             </div>
@@ -201,10 +201,10 @@ is available from your merchant or at openpay.com.au/australian-terms-conditions
 				</span>
         </div>
         <div class="footerAppWrapper">
-            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘iOS’, ‘Footer’);”>
+            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
                 <img class="apple" src="./images/apple.svg">
             </a>
-            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Footer’);”>
+            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
                 <img class="android" src="./images/android.svg">
             </a>
         </div>
