--- a/src/business.html
+++ b/src/business.html
@@ -270,10 +270,10 @@
 				</span>
         </div>
         <div class="footerAppWrapper">
-            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘iOS’, ‘Footer’);”>
+            <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
                 <img class="apple" src="./images/apple.svg">
             </a>
-            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Footer’);”>
+            <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
                 <img class="android" src="./images/android.svg">
             </a>
         </div>
