--- a/src/shop-brand.html
+++ b/src/shop-brand.html
@@ -122,7 +122,7 @@
                     <span id="category"></span> · <span id="subcategory"></span>
                 </p>
                 <div class="brand-action">
-                    <a href="" id="url" onclick=”ga(‘send’, ‘event’, ‘Outbound’, ‘Brand Website’);” target="_blank" rel="noopener noreferrer">
+                    <a href="" id="url" onclick="ga('send', 'event', 'Outbound', 'Brand Website', 'Brand Page');" target="_blank" rel="noopener noreferrer">
                         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                             <g stroke-width="1.947" transform="translate(1.474 1.22)" stroke="#2864FF" fill="none"
                                fill-rule="evenodd">
@@ -190,10 +190,10 @@
 				</span>
     </div>
     <div class="footerAppWrapper">
-        <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick=”ga(‘send’, ‘event’, ‘App’, ‘iOS’, ‘Footer’);”>
+        <a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">
             <img class="apple" src="./images/apple.svg">
         </a>
-        <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick=”ga(‘send’, ‘event’, ‘App’, ‘Android’, ‘Footer’);”>
+        <a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">
             <img class="android" src="./images/android.svg">
         </a>
     </div>
